--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "stripe/stripe-php": "^13.7"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.9",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
